# passphrase

./: README.md  passphrase
server/: Cargo.toml
server/src/: main.rs
system.d/: passphrase.service
