[package]
name = "passphrase-rs"
version = "0.1.0"
authors = ["Joey Goode <joey@clypd.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.4.5"
serde = {version = "^1.0.114", features = ["derive"]}
postgres = "0.17.3" # needed for SQL array unmarshalling
serde_json = "1.0"

[dependencies.rusqlite]
version = "0.23"
features = ["buildtime_bindgen", "serde_json"]

[dependencies.rocket_contrib]
version = "0.4.5"
default-features = false
features = ["json"]
